# Notification-Roles-Bot

./: README.md  pyproject.toml  requirements.txt
src/: notification_roles_bot.py
