[tool.poetry]
name = "notification-roles-bot"
version = "1.0.0"
description = "Notification Roles Bot is a Discord bot that simplifies the use of no permission, mentionable roles that a user wants to subscribe to."
authors = ["erickyeagle <51383074+erickyeagle@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.5.3"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
